--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
-    "kaboom": "^2000.1.8"
+    "kaboom": "^2000.1.8",
+    "tiled-kaboom": "0.0.14"
   }
 }
